<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    android:background="@color/screenbackgroundsBlue"
    tools:context=".Activities.signups.AddCustomers_SupplierActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/toplay"
        android:layout_weight="0.6"
        android:background="@color/screenbackgroundsBlue"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/logoslider"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4"
        android:background="@drawable/cardviewlook">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skipstr_inAC"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:id="@+id/skipBtnitwo"
            android:layout_alignParentRight="true"
            android:textColor="@color/appTextColor"
            android:textSize="18dp"
            android:fontFamily="@font/petitamedium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addcustomerstr_inAC"
                android:layout_marginTop="30dp"
                android:textColor="@color/appTextColor"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="@font/petitamedium"/>


            <ImageView
                android:layout_marginTop="30dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/remindeiconr"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keepcustomer_inAC"
                android:layout_marginTop="30dp"
                android:textColor="@color/appTextColor"
                android:textSize="18dp"
                android:fontFamily="@font/petitamedium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addreminders_inAC"
                android:layout_marginTop="2dp"
                android:textColor="@color/appTextColor"
                android:textSize="18dp"
                android:fontFamily="@font/petitamedium"/>

            <ImageView
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/second"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="40dp"
                android:fontFamily="@font/petitamedium"
                android:textStyle="bold"
                android:id="@+id/nextbutton_intwo"
                android:text="@string/next_inAC"
                android:textColor="#ffffff"
                android:layout_marginRight="40dp"
                android:background="@drawable/bluelanguagebtn"
                android:layout_marginTop="30dp"/>



        </LinearLayout>


    </RelativeLayout>




</LinearLayout>